--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.17
+  flutter_svg: ^2.0.1
+  freezed: ^3.0.4
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
   yumemi_weather:
     git:
       url: https://github.com/yumemi-inc/flutter-training-template.git
@@ -18,8 +21,10 @@ dependencies:
       path: packages/yumemi_weather
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.9.4
   yumemi_lints: ^3.0.0
 
 flutter:
