--- a/build.yaml
+++ b/build.yaml
@@ -4,3 +4,8 @@ targets:
       json_serializable:
         options:
           field_rename: snake # デフォルトから変更
+      source_gen:combining_builder:
+        options:
+          ignore_for_file:
+            - type=lint
+            - duplicate_ignore
