--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   freezed: ^3.0.4
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  riverpod_annotation: ^2.6.1
   yumemi_weather:
     git:
       url: https://github.com/yumemi-inc/flutter-training-template.git
@@ -22,9 +24,12 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.15
+  custom_lint: ^0.7.5
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
   yumemi_lints: ^3.0.0
 
 flutter:
